--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
 		<!-- Header -->
 		<div id="header">
 
-			<img src="images/img2/logo.jpg" class="img-fluid" alt="...">
-
-			<!-- Nav -->                                                                     -->
-
+			<img src="images/img2/logo.jpg" class="img-fluid">
 
 			<nav id="nav">
 				<ul>
