--- a/nosotros.html
+++ b/nosotros.html
@@ -32,7 +32,7 @@
 
 				<div class="container-fluid">
 					<a class="navbar-brand" href="index.html">
-					  <img src="/images/img2/logo.jpg" alt="" width="60" height="54" class="d-inline-block align-text-top">
+					  <img src="/images/img2/logo.jpg" width="60" height="54" class="d-inline-block align-text-top">
 					</a>
 				  </div>
 
