--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 
 			<nav id="nav">
 				<ul>
-					<img src="images/img2/logo.jpg" alt="" width="42" height="36" class="d-inline-block align-text-top">
 					<li><a href="index.html">Principal</a></li>
 					<li><a href="nosotros.html">Sobre Nosotros</a></li>
 					<li><a href="galeria.html">Galeria </a></li>
@@ -61,7 +60,7 @@
 					<p>Constructora CubiCruz S.R.L, nace en el año 2018, con el fin de marcar la diferencia en el
 						mercado nacional construtivo, brindando variedad de modelos de casas, modernas, económicas de
 						alta gama.
-						Contamos con un personal altamente capacitado en el área de tramitologia, servicios al cliente y
+						Contamos con un personal altamente capacitado en el área de tramitologia, servicio al cliente y
 						constructiva.</p>
 				</header>
 
@@ -98,7 +97,7 @@
 
 						<header>
 					
-							<img src="images/img2/transparent-mortgage-icon-accounting-icon-sale-icon-5ddfac7db66b96.6212717815749397737472.png">
+							<img src="images/transparent-mortgage-icon-accounting-icon-sale-icon-5ddfac7db66b96.6212717815749397737472.png">
 					
 						<p>Bienes raíces.</p>
 					</header>
@@ -190,8 +189,7 @@
 							<div class="card-body">
 								<h5 class="card-title text-center">Bono crédito </h5>
 								<p class="card-text">Si se requiere un financiamiento adicional al bono de vivienda, la
-									entidad que realiza el trámite, pone a disposición
-									pequeños financiamientos para cubrir gastos de formalización, acabados de la casa,
+									entidad que realiza el trámite, pone a disposición un crédito para cubrir gastos de formalización, acabados de la casa,
 									entre otros fines.</p>
 							</div>
 						</div>
@@ -214,7 +212,7 @@
 
 						<div class="card text-dark bg-light mb-3" style="max-width: 25rem;">
 							<div class="card-body">
-								<h5 class="card-title text-center">Bono de construcción en lote propio </h5>
+								<h5 class="card-title text-center">Bono Patio </h5>
 								<p class="card-text">Brinda a las familias que no cuentan con lote propio, la
 									oportunidad de construir su vivienda en un terreno no segregable de un
 									familiar. La familia solicitante del bono y la familia dueña del terreno deben estar
@@ -234,9 +232,8 @@
 								<h5 class="card-title text-center">Bono de adulto mayor o discapacidad</h5>
 								<p class="card-text">Para aquellos adultos mayores sin núcleo familiar o parejas de más
 									de 65 años, que cuenten con las capacidades físicas y
-									mentales para habitar solos una vivienda. Ademas para familias que tienen entre sus
-									miembros una o más personas con impedimento
-									físico total y permanente. Tener un ingreso familiar menor a ¢1.615.932 mensual.
+									mentales para habitar solos una vivienda. Ademas para personas que tengan una discapacidad
+									de mas de un 67% aprobada por la Comisión Calificadora.
 								</p>
 							</div>
 						</div>
@@ -390,8 +387,8 @@
 							<h3>Siganos en nuestra red social</h3>
 						</header>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-facebook-f"><span
-										class="label">Facebook</span></a></li>
+							<i><a href="https://www.facebook.com/Constructora-CubiCruz-SRL-433579847388901" class="icon brands fa-facebook-f" ><span
+										class="label">Facebook</span>: Constructora CubiCruz S.R.L</a></i>
 						</ul>
 					</section>
 					</section>
@@ -430,7 +427,7 @@
 							<path d="M8 1a7 7 0 1 0 4.95 11.95l.707.707A8.001 8.001 0 1 1 8 0v1z"/>
 							<path d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"/>
 						  </svg>
-						 <i class="bi bi-clock-history">De lunes a viernes de 8:30am a 12md de 1pm a 4:30pm</i> 
+						 <i class="bi bi-clock-history">De lunes a viernes de 8:30am a 12md de 1pm a 4:30pm - sábados de 8:30am a 12md.</i> 
 						</p>
 					</header>
 
