--- a/nosotros.html
+++ b/nosotros.html
@@ -93,7 +93,7 @@
 				<div class="row">
 
 
-					<section class="col-3 col-12-mobile">
+					<section class="col-2 col-12-mobile">
 
 						<header>
 					        
@@ -101,9 +101,9 @@
 					</header>
 					</section>
 
-					<section class="col-4 col-12-mobile">
+					<section class="col-4 col-8-mobile">
 						<header>
-							<h4>Logo comercial</h4>
+							<h4> &nbsp; Logo comercial</h4>
 							<img src="images/img2/logo 2.jpg">
 
 						</header>
