--- a/nosotros.html
+++ b/nosotros.html
@@ -7,7 +7,8 @@
 <html>
 
 <head>
-	<title>Helios by HTML5 UP</title>
+	<link rel="icon" href="images/caja.png" type="image/gif" sizes="18x24">
+	<title>Green Movers CR</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
